cms合并